tests/error/divideInteger-bool-wrong-1st-argument.uplc
(program 1.0.0[[(builtin divideInteger)(con bool True)](con integer 10)])